# CDataStructures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  datatypes.h  library.h  map.h
lib/graph/: defines.h  edge.c  edge.h  vertex.c  vertex.h
lib/lists/: defines.h  list_cll.c  list_cll.h  list_dll.c  list_dll.h  list_helpers.c  list_helpers.h  list_sll.c  list_sll.h  lists.h  node.c  node.h
test/: CMakeLists.txt  test_lists.c  test_main.c
